Fixed the first link

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <body>
     <h1 id="main">Welcome</h1>
     <div class="column1">
-      <a href="index.html">
+      <a href="first.html">
         <div class="content1">
           <h1>Monday</h1>
 
