--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <h1>Tuesday</h1>
         </div>
       </a>
-      <a href="DAY3">
+      <a href="DAY3.html">
         <div class="content1">
           <h1>Wednesday</h1>
         </div>
